--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,9 @@
-<h1>The Best Movies According to Angela</h1>
+<h1>The Best Movies According to Prashant</h1>
 <h2>My top 3 movies of all-time.</h2>
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h3>3 Idiots</h3>
+<p>This is my favourite movie. It is about education and friendship.</p>
+<h3>Kedarnath</h3>
+<p>Very nice movie on Lord Shiva temple in Kedarnath. It has good songs.</p>
+<h3>Golmaal</h3>
+<p>Super comedy movie</p>
